--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha": "^2.5.3",
     "node-sass": "^3.7.0",
     "react-addons-test-utils": "^15.1.0",
+    "redux": "^3.5.2",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
